# minishell_test

./: -la  >  CMakeLists.txt  Makefile  README.md  a.out  c  echo  main.c  q  qwer  w
a.out.dSYM/Contents/Resources/DWARF/: a.out
build-in_functions/: cd.c  echo.c  pwd.c
envp/: env_finder.c  reallocate_envp.c
exit_functions/: exit_malloc.c
includes/: build-in_functions.h  exit.h  minishell.h  pars.h
libft/: Makefile  clear_2d_arr.c  libft.h  size_of_2d_array.c
parser/: check_quotes.c  check_reds.c  get_args.c  update_split.c
parser/check_valid_line/: check_quotes.c  check_reds.c
